WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143761
[W32] GraphicsContextCairoWin.cpp fails to compile: unallowed function template partial specialization
https://bugs.webkit.org/show_bug.cgi?id=143761
Summary
[W32] GraphicsContextCairoWin.cpp fails to compile: unallowed function templa...
LRN
Reported
2015-04-15 06:23:14 PDT
In file included from ../webkitgtk-2.4.8/Source/WebCore/platform/graphics/win/GraphicsContextCairoWin.cpp:35:0: ../webkitgtk-2.4.8/Source/WTF/wtf/win/GdiObject.h:114:58: error: function template partial specialization 'deleteObject<T>' is not allowed template<typename T> inline void deleteObject<T>(T object) ^
Attachments
Fix deleteObject prototypte, fix header case
(4.88 KB, patch)
2015-04-15 09:56 PDT
,
LRN
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
LRN
Comment 1
2015-04-15 09:56:06 PDT
Created
attachment 250806
[details]
Fix deleteObject prototypte, fix header case Apparently, <T> is unneeded here: In file included from ../webkitgtk-2.4.8/Source/WebCore/platform/graphics/win/GraphicsContextCairoWin.cpp:35:0: ../webkitgtk-2.4.8/Source/WTF/wtf/win/GdiObject.h:114:58: error: function template partial specialization 'deleteObject<T>' is not allowed template<typename T> inline void deleteObject<T>(T object) ^ As a bonus, change GdiObject.h -> GDIObject.h (this matters when cross-compiling or when using case-sensitive filesystems on W32).
Carlos Garcia Campos
Comment 2
2015-05-18 23:25:20 PDT
Committed to 2.4
http://trac.webkit.org/changeset/184547
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug