[W32] GraphicsContextCairoWin.cpp fails to compile: unallowed function template partial specialization https://bugs.webkit.org/show_bug.cgi?id=143761

Patch by Руслан Ижбулатов <lrn1986@gmail.com> on 2015-04-15
Reviewed by Darin Adler.

Fix deleteObject prototypte, fix header case

Apparently, <T> is unneeded here:

Source/WebCore:

In file included from ../webkitgtk-2.4.8/Source/WebCore/platform/graphics/win/GraphicsContextCairoWin.cpp:35:0:
../webkitgtk-2.4.8/Source/WTF/wtf/win/GdiObject.h:114:58: error: function template partial specialization 'deleteObject<T>' is not allowed
template<typename T> inline void deleteObject<T>(T object)
                                                         ^
As a bonus, change GdiObject.h -> GDIObject.h (this matters when
cross-compiling or when using case-sensitive filesystems on W32).

Source/WTF:

In file included from ../webkitgtk-2.4.8/Source/WebCore/platform/graphics/win/GraphicsContextCairoWin.cpp:35:0:
../webkitgtk-2.4.8/Source/WTF/wtf/win/GdiObject.h:114:58: error: function template partial specialization 'deleteObject<T>' is not allowed
 template<typename T> inline void deleteObject<T>(T object)
                                                          ^
As a bonus, change GdiObject.h -> GDIObject.h (this matters when
cross-compiling or when using case-sensitive filesystems on W32).

* wtf/win/GDIObject.h:
(WTF::deleteObject):